# mg

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
mg/: maintenance.py
mg/alerts/: alert_manager.py  alerts.py  checks.py  config.py  constants.py  notification.py  stale_checks.py
mg/db/: __init__.py  config.py  postgres_manager.py  postgres_user.py  queries.py  sql_etl.py  sql_server_manager.py
mg/db/hermes/: __init__.py  base.py  game.py  player.py  team.py
mg/etl/: chronos.py  entity_mapper.py  export_data_scrape.py  lexis.py  proteus.py
mg/etl/hermes/: __init__.py  base.py  game.py  player.py  team.py
mg/google_cloud/: cloud_storage.py  config.py  constants.py  jobs.py  publish.py  secret_manager.py
mg/logging/: __init__.py  logger_manager.py
mg/mac/: cron_manager.py
mg/models/: model_manager.py
mg/process_manager/: process_manager.py  process_runner.py
mg/scraper_tools/: http_handler.py
mg/utils/: project_folder.py  schema_exporter.py  settings.py  utils.py
