[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mg"
version = "3.0.8"

authors = [
    {name = "Gabe Garrido", email = "gabriel.garrido28@gmail.com"},
]
description = "Master Global package."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"  # Use the SPDX identifier
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.29.0",
    "psycopg2-binary>=2.9.7",
    "unidecode>=1.3.8",
    "psutil>=6.0.0",
    "python-Levenshtein>=0.26.0",
    "GitPython>=3.1.44",
    "dill>=0.3.9",
    "pytz>=2023.3",
    "scikit-learn>=1.3.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-run>=0.10.16",
    "google-cloud-secret-manager>=2.17.0",
    "google-cloud-pubsub>=2.29.0"
]

[project.optional-dependencies]
sqlserver = ["pyodbc>=4.0.39"]

# Correct format is a direct array, not a nested structure
license-files = ["LICENSE"]
